# detect_git_service

./: .appveyor.yml  .travis.yml  Cargo.toml  README.md
src/: error.rs  git.rs  lib.rs  service.rs
